# pocket_pet

./: .gitignore  CREDITS.md  DESIGN.md  README.md  build.ps1  pyproject.toml
assets/sprites/: README.md
assets/sprites/rabbit/: CREDITS.txt  climb.json  drag.json  eat.json  fall.json  idle.json  idle2.json  land.json  pet.json  run.json  sleep.json  walk.json
packaging/: launcher.py
spikes/: spike_overlay.py  spike_windows.py
src/pocket_pet/: __init__.py  app.py  config.py  main.py
src/pocket_pet/core/: __init__.py  pet.py  physics.py  state_machine.py
src/pocket_pet/platform/: __init__.py  winapi.py
src/pocket_pet/sim/: __init__.py  ai.py  dialogue.py  growth.py  needs.py  persistence.py  species.py
src/pocket_pet/ui/: __init__.py  food.py  pet_window.py  poop.py  speech_bubble.py  sprite.py  sprite_asset.py  sprite_provider.py  stats_panel.py  tray.py
tests/: test_ai.py  test_dialogue.py
tools/: gen_rabbit_art.py  process_eat2.py  shimeji_to_sheets.py
