[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-pet"
version = "0.0.1"
description = "Desktop pet that walks the desktop, perches on windows, falls with gravity, and grows."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11",
    "pywin32>=306",
]

[project.gui-scripts]
pocket-pet = "pocket_pet.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pocket_pet" = ["../assets/**/*"]
